fixed blur on ios and added responsiveness for lower width devices

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ a, a:hover, a:focus, a:active {
   background-size: 200%;
 }
 
+
 .contact-me-button span {
   white-space: nowrap;
 	background: #1D1D1F;
@@ -126,12 +127,13 @@ section {
 
 #blur {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   top: 0;
   left: 0;
   position: fixed;
   z-index: 2;
   backdrop-filter: blur(8vmax);
+  -webkit-backdrop-filter: blur(8vmax);
 }
 
 #blob {
@@ -320,7 +322,9 @@ section {
 }
 
 #lets-code-together {
+  width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 #lets-code-together > h1 {
@@ -487,6 +491,169 @@ form button {
     font-size: 40px;
     top: 15px;
     right: 35px;
+  }
+}
+
+@media only screen and (max-device-width: 800px),
+only screen and (max-device-width: 1024px){
+  html {
+    overflow-x: hidden;
+  }
+
+  .contact-me {
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    background:  #A374FF;
+    width: 200%;
+    transform: translateX(-25%);
+    border-radius: 50% 50% 0 0;
+    overflow-x: hidden;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+  }
+
+  .contact-me > * {
+    width: 100%;
+  }
+
+  .contact-column {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(0%);
+    width: 70vw;
+    text-align: center;
+  }
+
+  .contact-form {
+    display: none;
+  }
+
+  .contact-form > h2 {
+    display: none;
+  }
+  
+  .get-in-touch-column {
+    transform: translateX(0%);
+  }
+
+  .get-in-touch-column h2 {
+    font-size: 1.5rem;
+  }
+
+  .contact-me-button {
+    display: none;
+  }
+
+  .nav-sections-opener {
+    display: none;
+  }
+
+  #section-1-image {
+    position: absolute;
+    z-index: 4;
+    border-radius: 2rem;
+    width: 35vh;
+    height: 60vh;
+    object-fit: cover;
+  }
+
+  .selected-works {
+    height: 35vh;
+  }
+
+  .selected-work-title {
+    text-align: center;
+    color: #A374FF;
+    font-weight: 600;
+    font-size: 1rem;
+    width: 20%;
+  }
+  
+  .selected-work-description {
+    width: 100%;
+    height: 100%;
+    text-align: start;
+    padding-left: 10%;
+    font-size: 1.3rem;
+  }
+
+  .works {
+    height: 280vh;
+    overflow-y: scroll;
+  }
+
+  #lets-code-together > h1 {
+    font-size: 2.5rem;
+    font-weight: 600;
+    text-align: center;
+  }
+
+  .media-scroller {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    transform: rotateZ(0deg) translateY(11%);
+    width: 100vw;
+    align-items: stretch;
+  }
+
+  .media-element {
+    display: grid;
+    grid-template-rows: min-content;
+    border-radius: 0;
+    overflow: show;
+    width: 100%;
+    background-color: transparent;
+    color: black;
+    justify-content: center;
+  }
+  
+  .media-element img {
+    display: relative;
+    width: 80%;
+    height: 80%;
+    border-radius: 2rem;
+    object-fit: fill;
+    scale: 1.2;
+    margin: 10%;
+  }
+
+  .overlay {
+    position: relative;
+    width: 75%;
+    color: white;
+    opacity: 1;
+    font-size: 10px;
+    padding: 10px;
+    text-align: left;
+    transform: rotateZ(0deg);
+    translate: 0 0%;
+    background-color: transparent;    
+  }
+
+  .overlay-description {
+    font-size: 1.2rem;
+    font-weight: 400;
+    letter-spacing: -0.06;
+    line-height: 1.15;
+    text-shadow: 2px 2px black;
+  }
+
+  .overlay-title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: -0.06;
+    line-height: 1.125;
+    padding-top: 0.5rem;
+    text-shadow: 2px 2px black;
+  }
+
+  .overlay-tags {
+    padding-top: 0.5rem;
+    text-transform: uppercase;
+    text-shadow: 2px 2px black;
   }
 }
 
